[gd_scene load_steps=8 format=3 uid="uid://b5lubltgxtcht"]

[ext_resource type="Script" uid="uid://2v06a3t1j5y8" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Texture2D" uid="uid://dfv6t4itx4n2k" path="res://assets/bg/metro station.jpg" id="2_sugp2"]
[ext_resource type="PackedScene" path="res://scenes/UI.tscn" id="2_ui"]
[ext_resource type="Texture2D" uid="uid://fx88wiq186x3" path="res://assets/yaralÄ±-adam.png" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://bs4te4mir4b3n" path="res://assets/iy_cantasi.png" id="5_tefeu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(303, 422)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(180, 134)

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("2_sugp2")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("2_ui")]

[node name="Areas" type="Node2D" parent="."]

[node name="InjuredPerson" type="Area2D" parent="Areas"]
position = Vector2(640, 400)

[node name="Sprite2D" type="Sprite2D" parent="Areas/InjuredPerson"]
position = Vector2(-225, 0)
texture = ExtResource("4_tbgi4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/InjuredPerson"]
position = Vector2(-229, -3)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Medkit" type="Area2D" parent="Areas"]
position = Vector2(1050, 500)

[node name="Sprite2D" type="Sprite2D" parent="Areas/Medkit"]
position = Vector2(123, -436)
scale = Vector2(0.622, 0.628)
texture = ExtResource("5_tefeu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Medkit"]
position = Vector2(127, -418)
shape = SubResource("RectangleShape2D_tefeu")

[connection signal="input_event" from="Areas/InjuredPerson" to="." method="_on_injured_person_input_event"]
[connection signal="input_event" from="Areas/Medkit" to="." method="_on_medkit_input_event"]
